src/test/ui/impl-trait/static-return-lifetime-infered.stderr
error[E0758]: cannot infer an appropriate lifetime
  --> $DIR/static-return-lifetime-infered.rs:7:16
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                         -----     ----------------------- ...is required to live as long as `'static` here...
   |                         |
   |                         this data with an anonymous lifetime `'_`...
LL |         self.x.iter().map(|a| a.0)
   |         ------ ^^^^
   |         |
   |         ...and is captured here
   |
help: to declare that the `impl Trait` captures data from argument `self`, you can add an explicit `'_` lifetime bound
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> + '_ {
   |                                                           ^^^^

error[E0758]: cannot infer an appropriate lifetime
  --> $DIR/static-return-lifetime-infered.rs:11:16
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                        --------     ----------------------- ...is required to live as long as `'static` here...
   |                        |
   |                        this data with lifetime `'a`...
LL |         self.x.iter().map(|a| a.0)
   |         ------ ^^^^
   |         |
   |         ...and is captured here
   |
help: to declare that the `impl Trait` captures data from argument `self`, you can add an explicit `'a` lifetime bound
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> + 'a {
   |                                                             ^^^^

error: aborting due to 2 previous errors

